# Voxanova

.github/workflows/: deploy-site.yml  release-plugin.yml
Voxanova/: .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  landing.html  package-lock.json  package.json  vite.site.config.ts
Voxanova/docs/: limpieza-pendiente.md
Voxanova/plugin-shell/: CMakeLists.txt  README.md
Voxanova/plugin-shell/source/: FatTuneEngine.cpp  FatTuneEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Voxanova/src/: App.jsx  nativeBridge.js  pluginContract.js  styles.css
Voxanova/src/components/: BandPanel.jsx  EffectsModule.jsx  EqPanel.jsx  Faders.jsx  Knobs.jsx  Meters.jsx  ModuleCard.jsx  RackHeader.jsx
Voxanova/src/landing/: main.tsx  styles.css
Voxanova/src/utils/: eq.js  format.js  initialState.js
Voxanova/src/v2/: controlReset.js  controls.jsx  eqCurve.jsx  ioModules.jsx  knob.jsx  modules.jsx  tweaksPanel.jsx  wheelControl.js
Voxanova/tools/: prepare_site_index.mjs  probe_compressor.py
